fix asset uploader
updated with key for paid Uploadcare account

--- a/index.html
+++ b/index.html
@@ -153,17 +153,16 @@
         </div>
         <h1 class="masthead__wordmark"><span class="masthead__bracket">&lt;</span>A-Frame<span class="masthead__bracket">&gt;</span></h1>
         <p class="masthead__slogan">Asset Uploader</p>
-        <p><button id="uploadButton" class="btn btn--upload" disabled>Upload</button></p>
-        <p>Sorry, the Uploader is currently not working. Please try another file host.</p>
+        <p><button id="uploadButton" class="btn btn--upload">Upload</button></p>
         <ul id="filesList" class="files"></ul>
       </div>
     </main>
     <script>
       UPLOADCARE_LOCALE = 'en';
       UPLOADCARE_TABS = 'file url facebook gdrive dropbox instagram evernote flickr skydrive';
-      UPLOADCARE_PUBLIC_KEY = 'd8498171c34e5cff6628';
+      UPLOADCARE_PUBLIC_KEY = '932421d71bae10ba5cc0';
     </script>
-    <script src="//ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
+    <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <input type="hidden" role="uploadcare-uploader" data-multiple="true">
     <script>
       (function () {
