update Mozilla logo (fixes #23)

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class="wrap">
         <div class="credits">
           <a href="https://www.mozilla.org/">
-            <img src="https://cdn.aframe.io/mozilla/img/logo-mozilla-white.svg"
+            <img src="mozilla/img/logo-mozilla-white.svg"
                  class="mozilla-logo" title="Mozilla" alt="Mozilla">
           </a>
         </div>
